--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,11 @@ allprojects {
                 mavenBom("org.springframework.boot:spring-boot-dependencies:2.3.1.RELEASE")
             }
             dependency("com.google.guava:guava:${Versions.guava}")
+            dependency("com.oracle.database.jdbc:ojdbc8:${Versions.ojdbc8}")
+            dependency("redis.clients:jedis:${Versions.jedis}")
+            dependency("com.oracle.database.jdbc:ucp:${Versions.ucp}")
+            dependency("org.apache.httpcomponents:httpclient:${Versions.httpclient}")
+            dependency("org.apache.httpcomponents:httpmime:${Versions.httpmime}")
 
         }
     }
