--- a/diplom/build.gradle
+++ b/diplom/build.gradle
@@ -22,17 +22,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.4.1'
-    implementation 'redis.clients:jedis:3.4.1'
-    implementation 'com.oracle.database.jdbc:ojdbc8:19.6.0.0'
-    implementation 'com.oracle.database.jdbc:ucp:19.6.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'redis.clients:jedis'
+    implementation "com.oracle.database.jdbc:ojdbc8"
+    implementation 'com.oracle.database.jdbc:ucp'
     implementation 'com.google.code.gson:gson'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
-    compile ('org.apache.httpcomponents:httpmime:4.3.5') {
+    implementation 'org.apache.httpcomponents:httpclient'
+    compile ('org.apache.httpcomponents:httpmime') {
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
     implementation 'javax.json:javax.json-api'
-    implementation 'org.glassfish:javax.json:1.1'
+    implementation "org.glassfish:javax.json:1.1"
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
