Add changes by comments

--- a/diplom/build.gradle
+++ b/diplom/build.gradle
@@ -44,10 +44,28 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    exclude '**ru.otus.diplom/*'
 }
 
-test {
-    useJUnitPlatform()
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'ru.otus.diplom.DiplomApplication',
+        )
+    }
+}
+
+task fatJar(type: Jar) {
+    manifest.from jar.manifest
+    classifier = 'all'
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    } {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
+    with jar
 }
 
 apply plugin: 'java'
